name:                text-benchmarks
version:             0.0.0.0
synopsis:            Benchmarks for the text package
description:         Benchmarks for the text package
homepage:            https://bitbucket.org/bos/text
license:             BSD3
license-file:        ../LICENSE
author:              Jasper Van der Jeugt <jaspervdj@gmail.com>,
                     Bryan O'Sullivan <bos@serpentine.com>,
                     Tom Harper <rtomharper@googlemail.com>,
                     Duncan Coutts <duncan@haskell.org>
maintainer:          jaspervdj@gmail.com
category:            Text
build-type:          Simple

cabal-version:       >=1.2

flag llvm
  description: use LLVM
  default: False
  manual: True

executable text-benchmarks
  hs-source-dirs: haskell ..
  c-sources:      ../cbits/cbits.c
                  cbits/time_iconv.c
  include-dirs:   ../include
  main-is:        Benchmarks.hs
  ghc-options:    -Wall -O2 -rtsopts
  if flag(llvm)
    ghc-options:  -fllvm
  cpp-options:    -DHAVE_DEEPSEQ -DINTEGER_GMP
  build-depends:  base == 4.*,
                  binary,
                  blaze-builder,
                  bytestring,
                  bytestring-lexing >= 0.5.0,
                  containers,
                  criterion >= 0.10.0.0,
                  deepseq,
                  directory,
                  filepath,
                  ghc-prim,
                  integer-gmp,
                  stringsearch,
                  utf8-string,
                  vector

executable text-multilang
  hs-source-dirs: haskell
  main-is:        Multilang.hs
  ghc-options:    -Wall -O2
  build-depends:  base == 4.*,
                  bytestring,
                  text,
                  time
