cabal-version:       1.12
name:                text-benchmarks
version:             0.0.0.0
synopsis:            Benchmarks for the text package
description:         Benchmarks for the text package.
homepage:            https://bitbucket.org/bos/text
license:             BSD2
license-file:        LICENSE
author:              Jasper Van der Jeugt <jaspervdj@gmail.com>,
                     Bryan O'Sullivan <bos@serpentine.com>,
                     Tom Harper <rtomharper@googlemail.com>,
                     Duncan Coutts <duncan@haskell.org>
maintainer:          jaspervdj@gmail.com
category:            Text
build-type:          Simple
tested-with:    GHC==9.0.1,
                GHC==8.10.4, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4,
                GHC==8.2.2, GHC==8.0.2

flag bytestring-builder
  description: Depend on the bytestring-builder package for backwards compatibility.
  default: False
  manual: False

flag llvm
  description: use LLVM
  default: False
  manual: True

benchmark text-benchmarks
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -O2 -rtsopts
  if flag(llvm)
    ghc-options:  -fllvm
  cpp-options:    -DINTEGER_GMP
  build-depends:  array,
                  base == 4.*,
                  binary,
                  bytestring-lexing >= 0.5.0,
                  containers,
                  tasty-bench >= 0.2,
                  deepseq,
                  directory,
                  filepath,
                  ghc-prim,
                  integer-gmp,
                  stringsearch,
                  template-haskell,
                  text,
                  transformers,
                  utf8-string,
                  vector

  if flag(bytestring-builder)
    build-depends: bytestring         >= 0.9    && < 0.10.4,
                   bytestring-builder >= 0.10.4
  else
    build-depends: bytestring         >= 0.10.4

  -- modules for benchmark proper
  c-sources:      cbits-bench/time_iconv.c
  hs-source-dirs: haskell
  main-is:        Benchmarks.hs
  other-modules:
    Benchmarks.Builder
    Benchmarks.Concat
    Benchmarks.DecodeUtf8
    Benchmarks.EncodeUtf8
    Benchmarks.Equality
    Benchmarks.FileRead
    Benchmarks.FoldLines
    Benchmarks.Mul
    Benchmarks.Programs.BigTable
    Benchmarks.Programs.Cut
    Benchmarks.Programs.Fold
    Benchmarks.Programs.Sort
    Benchmarks.Programs.StripTags
    Benchmarks.Programs.Throughput
    Benchmarks.Pure
    Benchmarks.ReadNumbers
    Benchmarks.Replace
    Benchmarks.Search
    Benchmarks.Stream
    Benchmarks.WordFrequencies

  default-language: Haskell2010
  default-extensions: NondecreasingIndentation
  other-extensions: DeriveAnyClass

benchmark text-multilang
  type:           exitcode-stdio-1.0
  hs-source-dirs: haskell
  main-is:        Multilang.hs
  other-modules:  Timer
  ghc-options:    -Wall -O2
  build-depends:  base == 4.*,
                  bytestring,
                  text,
                  time

  default-language: Haskell2010
  default-extensions: NondecreasingIndentation
