cabal-version: 2.2
name: th-tests
version: 0
synopsis: TH text tests
maintainer: text maintainers
description:
  Tests that use 'Text' functions during compile time.
  .
  These are in a separate package because of https://github.com/haskell/cabal/issues/5623
license: BSD-2-Clause
license-file: LICENSE
category: Text
tested-with:    GHC==9.0.1,
                GHC==8.10.4, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4,
                GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4,
                GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

test-suite th-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests/
  main-is: th-tests.hs
  other-modules:
    Lift
  build-depends:
    HUnit >= 1.2,
    base <5,
    template-haskell,
    text,
    test-framework >= 0.4,
    test-framework-hunit >= 0.2
